Am reparat testele, am facut putin refactor si am reparat un bug